    - Don't attempt to migrate pid 1 itself when migrating cgroups for started
      units; works around some not yet understood cgproxy/systemd interaction.
      This particularly unbreaks cgproxy in LXC. (LP: #1491557)
    - Lower Breaks: to plymouth version which has the udev inotify fix in
      Ubuntu.
    - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200

systemd (227-3) UNRELEASED; urgency=medium

  [ Martin Pitt ]
  * debian/tests/logind: Add tests for scheduled shutdown with and without
    wall message.
  * Import upstream fix for not unmounting system mounts (#801361) and drop
    our revert patch.
  * debian/tests/boot-smoke: Apply check for failed unmounts only to user
    systemd processes, i. e. not to pid 1.
  * Drop Fix-usr-remount-failure-for-split-usr.patch. Jessie has a new enough
    initramfs-tools already, and this was just an error message, not breaking
    the boot.
  * Drop debian-fixup.service in favor of using a tmpfiles.d clause, which is
    faster.
  * Drop Order-remote-fs.target-after-local-fs.target.patch. It's mostly
    academic and only applies to the already known-broken situation that rcS
    init.d scripts depend on $remote_fs.

  [ Michael Biebl ]
  * Drop dependency on udev from the systemd package. We don't need udev
    within a container, so this allows us to trim down the footprint by not
    installing the udev package.

 -- Martin Pitt <mpitt@debian.org>  Tue, 13 Oct 2015 11:03:21 +0200

systemd (227-2) unstable; urgency=medium

  * Revert "sd_pid_notify_with_fds: fix computing msg_controllen", it causes
    connection errors from various services on boot. (Closes: #801354)
  * debian/tests/boot-smoke: Check for failed unmounts. This reproduces
    #801361 (but not in a minimal VM, just in a desktop one).
  * Revert "core: add a "Requires=" dependency between units and the