@@ -37,6 +37,8 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
     - Lower Breaks: to plymouth version which has the udev inotify fix in
       Ubuntu.
     - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)
+    - Don't build new systemd-journal-remote package and drop
+      libmicrohttpd-dev. This is blocked by the MIR (LP #1488341).
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
